--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,8 @@
   "manifest_version": 3,
   "name": "Web Page Summarizer",
   "version": "1.0",
-  "description": "Summarize any web page and extract keywords",
+  "description": "Summarize any web page and extract keywords.",
   "permissions": ["scripting", "activeTab"],
-  "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
